@@ -108,10 +108,10 @@ static void	process_test_data(zbx_uint64_t httptestid, int lastfailedstep, doubl
 
 	DB_RESULT	result;
 	DB_ROW		row;
-	unsigned char	types[3], states[3];
+	unsigned char	types[3];
 	DC_ITEM		items[3];
 	zbx_uint64_t	itemids[3];
-	int		lastclocks[3], errcodes[3];
+	int		errcodes[3];
 	size_t		i, num = 0;
 	AGENT_RESULT    value;
 
@@ -183,13 +183,8 @@ static void	process_test_data(zbx_uint64_t httptestid, int lastfailedstep, doubl
 		items[i].state = ITEM_STATE_NORMAL;
 		dc_add_history(items[i].itemid, items[i].value_type, 0, &value, ts, items[i].state, NULL);
 
-		states[i] = items[i].state;
-		lastclocks[i] = ts->sec;
-
 		free_result(&value);
 	}
-
-	DCrequeue_items(itemids, states, lastclocks, NULL, NULL, errcodes, num);
 
 	DCconfig_clean_items(items, errcodes, num);
 
@@ -202,12 +197,12 @@ static void	process_step_data(zbx_uint64_t httpstepid, zbx_httpstat_t *stat, zbx
 
 	DB_RESULT	result;
 	DB_ROW		row;
-	unsigned char	types[3], states[3];
+	unsigned char	types[3];
 	DC_ITEM		items[3];
 	zbx_uint64_t	itemids[3];
-	int		lastclocks[3], errcodes[3];
+	int		errcodes[3];
 	size_t		i, num = 0;
-	AGENT_RESULT    value;
+	AGENT_RESULT	value;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() rspcode:%ld time:" ZBX_FS_DBL " speed:" ZBX_FS_DBL,
 			__function_name, stat->rspcode, stat->total_time, stat->speed_download);
@@ -271,13 +266,8 @@ static void	process_step_data(zbx_uint64_t httpstepid, zbx_httpstat_t *stat, zbx
 		items[i].state = ITEM_STATE_NORMAL;
 		dc_add_history(items[i].itemid, items[i].value_type, 0, &value, ts, items[i].state, NULL);
 
-		states[i] = items[i].state;
-		lastclocks[i] = ts->sec;
-
 		free_result(&value);
 	}
-
-	DCrequeue_items(itemids, states, lastclocks, NULL, NULL, errcodes, num);
 
 	DCconfig_clean_items(items, errcodes, num);
 
@@ -518,6 +508,9 @@ static void	process_httptest(DC_HOST *host, zbx_httptest_t *httptest)
 				zbx_free(variables);
 			}
 
+			zbx_timespec(&ts);
+			process_step_data(httpstep.httpstepid, &stat, &ts);
+
 			zbx_free(var_err_str);
 			zbx_free(page.data);
 		}
@@ -529,9 +522,6 @@ httpstep_error:
 		zbx_free(httpstep.required);
 		zbx_free(httpstep.posts);
 		zbx_free(httpstep.url);
-
-		zbx_timespec(&ts);
-		process_step_data(httpstep.httpstepid, &stat, &ts);
 
 		if (NULL != err_str)
 		{
@@ -555,18 +545,6 @@ clean:
 			/* or we have been compiled without cURL library */
 
 			lastfailedstep = 1;
-
-			if (NULL != (row = DBfetch(result)))
-			{
-				ZBX_STR2UINT64(httpstep.httpstepid, row[0]);
-				httpstep.name = row[2];
-
-				memset(&stat, 0, sizeof(stat));
-
-				process_step_data(httpstep.httpstepid, &stat, &ts);
-			}
-			else
-				THIS_SHOULD_NEVER_HAPPEN;
 		}
 
 		zabbix_log(LOG_LEVEL_WARNING, "cannot process step \"%s\" of web scenario \"%s\" on host \"%s\": %s",
